-[FRONTEND] Deactivated editing buttons should not be visible to avoid calling the attention to inactive functionalities.

--- a/Printer3D-frontend/src/app/modules/renders/v1-part-container-render/v1-part-container-render.component.scss
+++ b/Printer3D-frontend/src/app/modules/renders/v1-part-container-render/v1-part-container-render.component.scss
@@ -6,6 +6,12 @@
     border-bottom: 1px solid #A09D9D80;
 }
 
+.save-disabled {
+    fill: gray;
+    opacity: 40%;
+    visibility: hidden;
+}
+
 .label-width {
     min-width: 20em;
 }
